# flippy

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  RELEASE  VERSION.json  banner
.github/workflows/: clang_on_linux_test.yml  coverage.yml  gcc_on_linux_test.yml  linux_test.yml  macos_test.yml  main.yml  mingw_on_windows_test.yml  msvc_on_windows_test.yml  windows_test.yml
demo/: Readme.md
demo/biconcave_shapes_MC/: CMakeLists.txt  Readme.md  data_visualisation.py  main.cpp
demo/just_a_wobbly_sphere_MC/: data_visualisation.py  main.cpp
demo/simplest_MC/: CMakeLists.txt  Readme.md  data_visualisation.py  main.cpp
docs/: Doxyfile.in  mainpage.md
flippy/: IcosahedronSubTriangulator.hpp  MonteCarloUpdater.hpp  Nodes.h  Nodes.hpp  Particles.hpp  Swarm.hpp  Triangulation.h  Triangulation.hpp  Triangulator.hpp  Wedge.hpp  custom_concepts.hpp  flippy.hpp  vec3.hpp
flippy/utilities/: debug_utils.hpp  utils.h  utils.hpp
single_header_flippy/: flippy.hpp
tests/: CMakeLists.txt  Nodes_test.cpp  Triangulation_test.cpp  Triangulator_test.cpp  build_tests  build_tests_for_single_header_flippy  build_tests_without_coverage  create_cmake_dir  do_tests  local_geometry_test.cpp  main.cpp  vec3_test.cpp
tests/init_files/: egg_init.json  egg_it_4.json
